<resources>
    <string name="app_name">WindowPlanner</string>

    <string name="need_permissions_need_permissions">
        This app requires calendar permissions to function.
        Close and re-open the app to continue.
    </string>
    <string name="schedule">Schedule</string>
    <string name="main_menu_add_task">Add Task</string>
    <string name="main_menu_settings_title">Settings</string>

    <string name="main_bottom_dayview">Day View</string>
    <string name="main_bottom_taskview">Task View</string>

    <string name="taskform_title">Create a task</string>
    <string name="taskform_task_1">1. Name your task</string>
    <string name="taskform_task_2">2. Select your start and end dates</string>
    <string name="taskform_task_3">3. Select the predicted time for this task</string>
    <string name="taskform_task_name">Task Name</string>
    <string name="taskform_start_date">Start Date</string>
    <string name="taskform_end_date">End Date</string>
    <string name="taskform_hours"> hours</string>
    <string name="taskform_create_task">Create Task</string>
    <string name="settings_title">Settings</string>

    <string name="settings_general_settings">General Settings</string>

    <string name="import_importbtn">Import Calendars</string>
    <string name="import_permission_title">Permission Needed</string>
    <string name="import_permission_desc">
        We need the calendar permission to schedule your events. \n
        You can explore the app without importing your calendar.</string>
    <string name="import_permission_explore">Explore the app</string>

    <string name="settings_job_length_title">Job Length</string>
    <string name="settings_job_length_key">job_length_key</string>
    <string name="settings_job_length_desc">The length of each job that a task is split up into</string>
    <string name="settings_job_minutes"> minutes</string>

</resources>
