<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/taskform_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:text="@string/taskform_task_1" />

    <EditText
        android:id="@+id/taskform_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:textColor="@android:color/white"
        android:inputType="textPersonName"
        android:hint="@string/taskform_task_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:text="@string/taskform_task_2" />

    <Button
        android:id="@+id/taskform_task_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:background="?selectableItemBackground"
        android:text="@string/taskform_start_date" />

    <Button
        android:id="@+id/taskform_task_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="?selectableItemBackground"
        android:text="@string/taskform_end_date" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:text="@string/taskform_task_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/taskform_seekbar"
            style="@style/SeekBarWithoutSteps"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:max="50"
            android:progress="25" />

        <TextView
            android:id="@+id/taskform_seekbar_num"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="" />

    </LinearLayout>
    <Button
        android:id="@+id/taskform_task_create"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:gravity="left|center"
        android:textColor="@color/colorAccent"
        android:background="?selectableItemBackground"
        android:text="@string/taskform_create_task" />


</LinearLayout>